--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,9 @@
+@import url(https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap);
 /*
 ! tailwindcss v3.0.24 | MIT License | https://tailwindcss.com
-*//*
+*/
+
+/*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
 2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
 */
@@ -340,6 +343,7 @@ button,
 /*
 Make sure disabled buttons don't get the pointer cursor.
 */
+
 :disabled {
   cursor: default;
 }
@@ -380,11 +384,25 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: none;
 }
 
-body {
+body{
   font-family: "Inter", sans-serif;
 }
 
-*, ::before, ::after {
+.navbarTogglerActive > span:nth-child(1){
+  transform: rotate(45deg);
+  top: 7px;
+}
+
+.navbarTogglerActive > span:nth-child(2){
+  opacity: 0;
+}
+
+.navbarTogglerActive > span:nth-child(3){
+  top: -8px;
+  transform: rotate(135deg);
+}
+
+*, ::before, ::after{
   --tw-translate-x: 0;
   --tw-translate-y: 0;
   --tw-rotate: 0;
@@ -428,276 +446,395 @@ body {
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
-.fixed {
-  position: fixed;
+.container{
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 16px;
+  padding-left: 16px;
 }
-.relative {
+@media (min-width: 400px){
+
+  .container{
+    max-width: 400px;
+  }
+}
+@media (min-width: 540px){
+
+  .container{
+    max-width: 540px;
+  }
+}
+@media (min-width: 720px){
+
+  .container{
+    max-width: 720px;
+  }
+}
+@media (min-width: 960px){
+
+  .container{
+    max-width: 960px;
+  }
+}
+@media (min-width: 1140px){
+
+  .container{
+    max-width: 1140px;
+  }
+}
+@media (min-width: 1320px){
+
+  .container{
+    max-width: 1320px;
+  }
+}
+.absolute{
+  position: absolute;
+}
+.relative{
   position: relative;
 }
-.top-0 {
-  top: 0px;
+.right-4{
+  right: 1rem;
 }
-.right-0 {
-  right: 0px;
+.top-1\/2{
+  top: 50%;
 }
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
+.top-full{
+  top: 100%;
 }
-.ml-1 {
-  margin-left: 0.25rem;
+.-mx-4{
+  margin-left: -1rem;
+  margin-right: -1rem;
 }
-.mt-2 {
-  margin-top: 0.5rem;
+.my-\[6px\]{
+  margin-top: 6px;
+  margin-bottom: 6px;
 }
-.mr-2 {
-  margin-right: 0.5rem;
+.block{
+  display: block;
 }
-.ml-2 {
-  margin-left: 0.5rem;
-}
-.mt-4 {
-  margin-top: 1rem;
-}
-.ml-4 {
-  margin-left: 1rem;
-}
-.mt-8 {
-  margin-top: 2rem;
-}
-.ml-12 {
-  margin-left: 3rem;
-}
-.-mt-px {
-  margin-top: -1px;
-}
-.flex {
+.flex{
   display: flex;
 }
-.grid {
-  display: grid;
-}
-.hidden {
+.hidden{
   display: none;
 }
-.h-5 {
-  height: 1.25rem;
+.h-\[2px\]{
+  height: 2px;
 }
-.h-8 {
-  height: 2rem;
+.w-full{
+  width: 100%;
 }
-.h-16 {
-  height: 4rem;
+.w-60{
+  width: 15rem;
 }
-.min-h-screen {
-  min-height: 100vh;
+.w-\[30px\]{
+  width: 30px;
 }
-.w-5 {
-  width: 1.25rem;
+.max-w-full{
+  max-width: 100%;
 }
-.w-8 {
-  width: 2rem;
+.max-w-\[250px\]{
+  max-width: 250px;
 }
-.w-auto {
-  width: auto;
+.-translate-y-1\/2{
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
-.max-w-6xl {
-  max-width: 72rem;
-}
-.grid-cols-1 {
-  grid-template-columns: repeat(1, minmax(0, 1fr));
-}
-.items-center {
+.items-center{
   align-items: center;
 }
-.justify-center {
-  justify-content: center;
+.justify-end{
+  justify-content: flex-end;
 }
-.overflow-hidden {
-  overflow: hidden;
+.justify-between{
+  justify-content: space-between;
 }
-.border-t {
-  border-top-width: 1px;
+.rounded-lg{
+  border-radius: 0.5rem;
 }
-.border-gray-200 {
-  --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
-}
-.bg-white {
+.bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
-.bg-gray-100 {
+.bg-body-color{
   --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+  background-color: rgb(99 115 129 / var(--tw-bg-opacity));
 }
-.p-6 {
-  padding: 1.5rem;
+.bg-primary{
+  --tw-bg-opacity: 1;
+  background-color: rgb(12 113 135 / var(--tw-bg-opacity));
 }
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
-.px-6 {
+.py-5{
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+.py-\[6px\]{
+  padding-top: 6px;
+  padding-bottom: 6px;
+}
+.px-6{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
-.pt-8 {
-  padding-top: 2rem;
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
-.text-center {
-  text-align: center;
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
-.text-sm {
-  font-size: 1rem;
+.px-7{
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
 }
-.text-lg {
-  font-size: 1.25rem;
+.pr-16{
+  padding-right: 4rem;
 }
-.font-semibold {
-  font-weight: 600;
+.text-base{
+  font-size: 1.125rem;
 }
-.leading-7 {
-  line-height: 1.75rem;
+.font-medium{
+  font-weight: 500;
 }
-.text-gray-200 {
+.text-dark{
   --tw-text-opacity: 1;
-  color: rgb(229 231 235 / var(--tw-text-opacity));
+  color: rgb(9 14 52 / var(--tw-text-opacity));
 }
-.text-gray-300 {
+.text-white{
   --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
-.text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
-}
-.text-gray-500 {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-.text-gray-600 {
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-.text-gray-700 {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-.text-gray-900 {
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-.underline {
-  -webkit-text-decoration-line: underline;
-          text-decoration-line: underline;
-}
-.antialiased {
+.antialiased{
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-.shadow {
+.shadow{
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-@media (prefers-color-scheme: dark) {
+.ring-primary{
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(12 113 135 / var(--tw-ring-opacity));
+}
 
-  .dark\:border-gray-700 {
-    --tw-border-opacity: 1;
-    border-color: rgb(55 65 81 / var(--tw-border-opacity));
+.snap {
+    -ms-scroll-snap-type: x mandatory;
+        scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
   }
-
-  .dark\:bg-gray-900 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(17 24 39 / var(--tw-bg-opacity));
+  
+  .snap::-webkit-scrollbar {
+    display: none;
   }
-
-  .dark\:bg-gray-800 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+  
+  .snap > img {
+    scroll-snap-align: center;
   }
-
-  .dark\:text-gray-500 {
-    --tw-text-opacity: 1;
-    color: rgb(107 114 128 / var(--tw-text-opacity));
+  
+  body {
+    font-family: "Inter", sans-serif;
   }
-
-  .dark\:text-white {
-    --tw-text-opacity: 1;
-    color: rgb(255 255 255 / var(--tw-text-opacity));
+  
+  .navbarTogglerActive > span:nth-child(1){
+  top: 7px;
+    transform: rotate(45deg);
+}
+  .navbarTogglerActive > span:nth-child(2){
+  opacity: 0;
+}
+  .navbarTogglerActive > span:nth-child(3){
+  top: -8px;
+  --tw-rotate: 135deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+  
+  input:checked ~ .dot{
+  --tw-translate-x: 100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  --tw-bg-opacity: 1;
+  background-color: rgb(12 113 135 / var(--tw-bg-opacity));
+}
+  
+  input:checked ~ .dot .active{
+  display: block;
+}
+  
+  input:checked ~ .dot .inactive{
+  display: none;
+}
+  
+  input#toggleFour:checked ~ .box{
+  --tw-bg-opacity: 1;
+  background-color: rgb(12 113 135 / var(--tw-bg-opacity));
+}
+  input#toggleFour:checked ~ .dot{
+  --tw-translate-x: 100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+  
+  input#toggleFive:checked ~ .dot{
+  --tw-translate-x: 100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+  input#toggleFive:checked ~ .dot span{
+  --tw-bg-opacity: 1;
+  background-color: rgb(12 113 135 / var(--tw-bg-opacity));
+}
+  
+  input#toggleSix:checked ~ .dot{
+  --tw-translate-x: 100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+  
+  input#toggleEight:checked ~ .box{
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 238 251 / var(--tw-bg-opacity));
+}
+  input#toggleEight:checked ~ .dot{
+  --tw-bg-opacity: 1;
+  background-color: rgb(12 113 135 / var(--tw-bg-opacity));
+}
+  input#toggleEight:checked ~ .dot span{
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(12 113 135 / var(--tw-bg-opacity));
+}
+  
+  input#toggleNine:checked ~ .dot span{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+  input#toggleNine:checked ~ .dot{
+  --tw-bg-opacity: 1;
+  background-color: rgb(12 113 135 / var(--tw-bg-opacity));
+}
+  
+  input:checked ~ .box{
+  --tw-border-opacity: 1;
+  border-color: rgb(12 113 135 / var(--tw-border-opacity));
+}
+  input#checkboxLabelOne:checked ~ .box{
+  --tw-border-opacity: 1;
+  border-color: rgb(12 113 135 / var(--tw-border-opacity));
+}
+  input#checkboxLabelOne:checked ~ .box .dot{
+  --tw-bg-opacity: 1;
+  background-color: rgb(12 113 135 / var(--tw-bg-opacity));
+}
+  
+  input#checkboxLabelTwo:checked ~ .box span{
+  opacity: 1;
+}
+  
+  input#checkboxLabelThree:checked ~ .box span{
+  opacity: 1;
+}
+  
+  input#checkboxLabelFour:checked ~ .box{
+  --tw-border-opacity: 1;
+  border-color: rgb(12 113 135 / var(--tw-border-opacity));
+}
+  input#checkboxLabelFour:checked ~ .box span{
+  --tw-bg-opacity: 1;
+  background-color: rgb(12 113 135 / var(--tw-bg-opacity));
+}
+  
+  input#checkboxLabelFive:checked ~ .box{
+  --tw-bg-opacity: 1;
+  background-color: rgb(12 113 135 / var(--tw-bg-opacity));
+}
+  
+  .shape-gradient {
+    background: linear-gradient(
+      180deg,
+      rgba(255, 255, 255, 0.08) 0%,
+      rgba(196, 196, 196, 0) 100%
+    );
   }
+  
+  .hover\:bg-opacity-90:hover{
+  --tw-bg-opacity: 0.9;
+}
+  
+  .hover\:text-primary:hover{
+  --tw-text-opacity: 1;
+  color: rgb(12 113 135 / var(--tw-text-opacity));
+}
+  
+  .focus\:ring-2:focus{
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+  
+  @media (min-width: 540px){
 
-  .dark\:text-gray-400 {
-    --tw-text-opacity: 1;
-    color: rgb(156 163 175 / var(--tw-text-opacity));
+  .sm\:flex{
+    display: flex;
   }
 }
-@media (min-width: 540px) {
+  
+  @media (min-width: 960px){
 
-  .sm\:ml-0 {
-    margin-left: 0px;
+  .lg\:static{
+    position: static;
   }
 
-  .sm\:block {
+  .lg\:ml-12{
+    margin-left: 3rem;
+  }
+
+  .lg\:block{
     display: block;
   }
 
-  .sm\:h-20 {
-    height: 5rem;
+  .lg\:flex{
+    display: flex;
   }
 
-  .sm\:items-center {
-    align-items: center;
+  .lg\:inline-flex{
+    display: inline-flex;
   }
 
-  .sm\:justify-start {
-    justify-content: flex-start;
+  .lg\:hidden{
+    display: none;
   }
 
-  .sm\:justify-between {
-    justify-content: space-between;
+  .lg\:w-full{
+    width: 100%;
   }
 
-  .sm\:rounded-lg {
-    border-radius: 0.5rem;
+  .lg\:max-w-full{
+    max-width: 100%;
   }
 
-  .sm\:px-6 {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+  .lg\:pr-0{
+    padding-right: 0px;
   }
 
-  .sm\:pt-0 {
-    padding-top: 0px;
-  }
-
-  .sm\:text-left {
-    text-align: left;
-  }
-
-  .sm\:text-right {
-    text-align: right;
-  }
-}
-@media (min-width: 720px) {
-
-  .md\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-
-  .md\:border-t-0 {
-    border-top-width: 0px;
-  }
-
-  .md\:border-l {
-    border-left-width: 1px;
-  }
-}
-@media (min-width: 960px) {
-
-  .lg\:px-8 {
-    padding-left: 2rem;
-    padding-right: 2rem;
+  .lg\:shadow-none{
+    --tw-shadow: 0 0 #0000;
+    --tw-shadow-colored: 0 0 #0000;
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
 }
