--- a/public/css/app.css
+++ b/public/css/app.css
@@ -510,6 +510,12 @@ body{
 .top-full{
   top: 100%;
 }
+.right-4{
+  right: 1rem;
+}
+.top-1\/2{
+  top: 50%;
+}
 .z-50{
   z-index: 50;
 }
@@ -520,6 +526,10 @@ body{
 .-mx-4{
   margin-left: -1rem;
   margin-right: -1rem;
+}
+.my-\[6px\]{
+  margin-top: 6px;
+  margin-bottom: 6px;
 }
 .ml-1{
   margin-left: 0.25rem;
@@ -575,6 +585,12 @@ body{
 .h-24{
   height: 6rem;
 }
+.h-\[6px\]{
+  height: 6px;
+}
+.h-\[2px\]{
+  height: 2px;
+}
 .min-h-screen{
   min-height: 100vh;
 }
@@ -596,6 +612,9 @@ body{
 .w-\[48px\]{
   width: 48px;
 }
+.w-\[30px\]{
+  width: 30px;
+}
 .max-w-xl{
   max-width: 36rem;
 }
@@ -604,6 +623,10 @@ body{
 }
 .max-w-full{
   max-width: 100%;
+}
+.-translate-y-1\/2{
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -648,6 +671,10 @@ body{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
+.bg-body-color{
+  --tw-bg-opacity: 1;
+  background-color: rgb(99 115 129 / var(--tw-bg-opacity));
+}
 .p-6{
   padding: 1.5rem;
 }
@@ -670,6 +697,14 @@ body{
 .py-5{
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
+}
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+.py-\[6px\]{
+  padding-top: 6px;
+  padding-bottom: 6px;
 }
 .pt-8{
   padding-top: 2rem;
@@ -766,6 +801,10 @@ body{
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.ring-primary{
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(12 113 135 / var(--tw-ring-opacity));
 }
 
 .snap {
@@ -915,6 +954,12 @@ body{
   color: rgb(12 113 135 / var(--tw-text-opacity));
 }
   
+  .focus\:ring-2:focus{
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+  
   .dark .dark\:inline-block{
   display: inline-block;
 }
@@ -992,6 +1037,10 @@ body{
 
   .lg\:inline-flex{
     display: inline-flex;
+  }
+
+  .lg\:hidden{
+    display: none;
   }
 
   .lg\:w-\[64px\]{
