--- a/public/css/app.css
+++ b/public/css/app.css
@@ -516,8 +516,23 @@ body{
 .top-1\/2{
   top: 50%;
 }
+.bottom-0{
+  bottom: 0px;
+}
+.top-5{
+  top: 1.25rem;
+}
+.right-10{
+  right: 2.5rem;
+}
 .z-50{
   z-index: 50;
+}
+.z-10{
+  z-index: 10;
+}
+.z-\[-1\]{
+  z-index: -1;
 }
 .mx-auto{
   margin-left: auto;
@@ -564,6 +579,9 @@ body{
 .mr-3{
   margin-right: 0.75rem;
 }
+.mb-0{
+  margin-bottom: 0px;
+}
 .block{
   display: block;
 }
@@ -572,6 +590,9 @@ body{
 }
 .flex{
   display: flex;
+}
+.inline-flex{
+  display: inline-flex;
 }
 .grid{
   display: grid;
@@ -597,6 +618,9 @@ body{
 .h-\[2px\]{
   height: 2px;
 }
+.h-10{
+  height: 2.5rem;
+}
 .min-h-screen{
   min-height: 100vh;
 }
@@ -621,6 +645,9 @@ body{
 .w-\[30px\]{
   width: 30px;
 }
+.w-10{
+  width: 2.5rem;
+}
 .max-w-xl{
   max-width: 36rem;
 }
@@ -636,6 +663,9 @@ body{
 }
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+.flex-wrap{
+  flex-wrap: wrap;
 }
 .items-center{
   align-items: center;
@@ -660,6 +690,9 @@ body{
 }
 .border{
   border-width: 1px;
+}
+.border-2{
+  border-width: 2px;
 }
 .border-t{
   border-top-width: 1px;
@@ -690,6 +723,10 @@ body{
 .bg-body-color{
   --tw-bg-opacity: 1;
   background-color: rgb(99 115 129 / var(--tw-bg-opacity));
+}
+.bg-gray-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 .fill-current{
   fill: currentColor;
@@ -724,6 +761,10 @@ body{
 .py-\[6px\]{
   padding-top: 6px;
   padding-bottom: 6px;
+}
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 .pt-8{
   padding-top: 2rem;
@@ -805,6 +846,10 @@ body{
 .text-dark{
   --tw-text-opacity: 1;
   color: rgb(9 14 52 / var(--tw-text-opacity));
+}
+.text-gray-800{
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 .underline{
   -webkit-text-decoration-line: underline;
@@ -1005,6 +1050,11 @@ body{
   display: none;
 }
   
+  .dark .dark\:border-white{
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+  
   .dark .dark\:bg-gray-900{
   --tw-bg-opacity: 1;
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
@@ -1013,6 +1063,11 @@ body{
   .dark .dark\:bg-slate-900{
   --tw-bg-opacity: 1;
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
+}
+  
+  .dark .dark\:bg-slate-800{
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
 }
   
   .dark .dark\:text-white{
@@ -1028,6 +1083,11 @@ body{
   .dark .dark\:text-gray-200{
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
+}
+  
+  .dark .hover\:dark\:border-primary:hover{
+  --tw-border-opacity: 1;
+  border-color: rgb(12 113 135 / var(--tw-border-opacity));
 }
   
   @media (min-width: 540px){
