--- a/public/css/app.css
+++ b/public/css/app.css
@@ -525,6 +525,12 @@ body{
 .right-10{
   right: 2.5rem;
 }
+.-left-8{
+  left: -2rem;
+}
+.-bottom-8{
+  bottom: -2rem;
+}
 .z-50{
   z-index: 50;
 }
@@ -547,6 +553,18 @@ body{
 }
 .mr-3{
   margin-right: 0.75rem;
+}
+.mb-6{
+  margin-bottom: 1.5rem;
+}
+.mb-8{
+  margin-bottom: 2rem;
+}
+.mb-4{
+  margin-bottom: 1rem;
+}
+.ml-2{
+  margin-left: 0.5rem;
 }
 .block{
   display: block;
@@ -572,6 +590,9 @@ body{
 .h-10{
   height: 2.5rem;
 }
+.h-\[1px\]{
+  height: 1px;
+}
 .min-h-screen{
   min-height: 100vh;
 }
@@ -590,8 +611,14 @@ body{
 .w-10{
   width: 2.5rem;
 }
+.w-8{
+  width: 2rem;
+}
 .max-w-full{
   max-width: 100%;
+}
+.max-w-\[520px\]{
+  max-width: 520px;
 }
 .-translate-y-1\/2{
   --tw-translate-y: -50%;
@@ -617,6 +644,9 @@ body{
 }
 .rounded-full{
   border-radius: 9999px;
+}
+.rounded-md{
+  border-radius: 0.375rem;
 }
 .border{
   border-width: 1px;
@@ -684,17 +714,41 @@ body{
 .pt-24{
   padding-top: 6rem;
 }
+.pt-\[60px\]{
+  padding-top: 60px;
+}
+.pb-\[110px\]{
+  padding-bottom: 110px;
+}
+.pt-16{
+  padding-top: 4rem;
+}
+.pt-11{
+  padding-top: 2.75rem;
+}
 .text-xl{
   font-size: 1.5rem;
 }
 .text-xs{
   font-size: .875rem;
 }
+.text-4xl{
+  font-size: 3rem;
+}
+.text-base{
+  font-size: 1.125rem;
+}
 .font-bold{
   font-weight: 700;
 }
 .font-medium{
   font-weight: 500;
+}
+.font-normal{
+  font-weight: 400;
+}
+.leading-snug{
+  line-height: 1.375;
 }
 .text-\[\#0c7187\]{
   --tw-text-opacity: 1;
@@ -707,6 +761,32 @@ body{
 .text-gray-800{
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
+}
+.text-amber-600{
+  --tw-text-opacity: 1;
+  color: rgb(217 119 6 / var(--tw-text-opacity));
+}
+.text-primary{
+  --tw-text-opacity: 1;
+  color: rgb(12 113 135 / var(--tw-text-opacity));
+}
+.text-body-color{
+  --tw-text-opacity: 1;
+  color: rgb(99 115 129 / var(--tw-text-opacity));
+}
+.no-underline{
+  -webkit-text-decoration-line: none;
+          text-decoration-line: none;
+}
+.decoration-primary{
+  -webkit-text-decoration-color: #0c7187;
+          text-decoration-color: #0c7187;
+}
+.decoration-2{
+  text-decoration-thickness: 2px;
+}
+.underline-offset-2{
+  text-underline-offset: 2px;
 }
 .antialiased{
   -webkit-font-smoothing: antialiased;
@@ -889,6 +969,11 @@ body{
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
   
+  .hover\:underline:hover{
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}
+  
   .focus\:ring-2:focus{
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
@@ -948,6 +1033,10 @@ body{
   .sm\:mr-4{
     margin-right: 1rem;
   }
+
+  .sm\:text-\[42px\]{
+    font-size: 42px;
+  }
 }
   
   @media (min-width: 960px){
@@ -966,6 +1055,10 @@ body{
 
   .lg\:mr-3{
     margin-right: 0.75rem;
+  }
+
+  .lg\:ml-auto{
+    margin-left: auto;
   }
 
   .lg\:block{
@@ -992,6 +1085,18 @@ body{
     width: 100%;
   }
 
+  .lg\:w-5\/12{
+    width: 41.666667%;
+  }
+
+  .lg\:w-1\/12{
+    width: 8.333333%;
+  }
+
+  .lg\:w-6\/12{
+    width: 50%;
+  }
+
   .lg\:max-w-full{
     max-width: 100%;
   }
@@ -1003,6 +1108,22 @@ body{
   .lg\:px-0{
     padding-left: 0px;
     padding-right: 0px;
+  }
+
+  .lg\:pt-\[80px\]{
+    padding-top: 80px;
+  }
+
+  .lg\:pt-0{
+    padding-top: 0px;
+  }
+
+  .lg\:text-right{
+    text-align: right;
+  }
+
+  .lg\:text-\[40px\]{
+    font-size: 40px;
   }
 
   .lg\:shadow-none{
@@ -1024,5 +1145,9 @@ body{
 
   .xl\:text-2xl{
     font-size: 1.875rem;
+  }
+
+  .xl\:text-\[42px\]{
+    font-size: 42px;
   }
 }
