--- a/public/css/app.css
+++ b/public/css/app.css
@@ -531,6 +531,12 @@ body{
 .-bottom-8{
   bottom: -2rem;
 }
+.-right-7{
+  right: -1.75rem;
+}
+.-bottom-7{
+  bottom: -1.75rem;
+}
 .z-50{
   z-index: 50;
 }
@@ -547,6 +553,14 @@ body{
 .my-\[6px\]{
   margin-top: 6px;
   margin-bottom: 6px;
+}
+.-mx-3{
+  margin-left: -0.75rem;
+  margin-right: -0.75rem;
+}
+.my-4{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 .mb-0{
   margin-bottom: 0px;
@@ -565,6 +579,12 @@ body{
 }
 .ml-2{
   margin-left: 0.5rem;
+}
+.mt-10{
+  margin-top: 2.5rem;
+}
+.mb-2{
+  margin-bottom: 0.5rem;
 }
 .block{
   display: block;
@@ -624,6 +644,9 @@ body{
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
+.transform{
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
 .flex-wrap{
   flex-wrap: wrap;
 }
@@ -639,6 +662,9 @@ body{
 .justify-between{
   justify-content: space-between;
 }
+.overflow-hidden{
+  overflow: hidden;
+}
 .rounded-lg{
   border-radius: 0.5rem;
 }
@@ -650,6 +676,9 @@ body{
 }
 .rounded{
   border-radius: 0.25rem;
+}
+.rounded-2xl{
+  border-radius: 1rem;
 }
 .border{
   border-width: 1px;
@@ -672,6 +701,10 @@ body{
 .border-primary{
   --tw-border-opacity: 1;
   border-color: rgb(12 113 135 / var(--tw-border-opacity));
+}
+.border-amber-500{
+  --tw-border-opacity: 1;
+  border-color: rgb(245 158 11 / var(--tw-border-opacity));
 }
 .bg-white{
   --tw-bg-opacity: 1;
@@ -736,6 +769,10 @@ body{
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
 .pr-4{
   padding-right: 1rem;
 }
@@ -757,6 +794,12 @@ body{
 .pt-11{
   padding-top: 2.75rem;
 }
+.pt-20{
+  padding-top: 5rem;
+}
+.pb-12{
+  padding-bottom: 3rem;
+}
 .text-xl{
   font-size: 1.5rem;
 }
@@ -769,6 +812,15 @@ body{
 .text-base{
   font-size: 1.125rem;
 }
+.text-lg{
+  font-size: 1.25rem;
+}
+.text-sm{
+  font-size: 1rem;
+}
+.text-3xl{
+  font-size: 2.25rem;
+}
 .font-bold{
   font-weight: 700;
 }
@@ -777,6 +829,12 @@ body{
 }
 .font-normal{
   font-weight: 400;
+}
+.font-semibold{
+  font-weight: 600;
+}
+.italic{
+  font-style: italic;
 }
 .leading-snug{
   line-height: 1.375;
@@ -811,6 +869,14 @@ body{
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.text-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+.text-amber-500{
+  --tw-text-opacity: 1;
+  color: rgb(245 158 11 / var(--tw-text-opacity));
 }
 .no-underline{
   -webkit-text-decoration-line: none;
@@ -1095,6 +1161,11 @@ body{
   color: rgb(229 231 235 / var(--tw-text-opacity));
 }
   
+  .dark .dark\:text-gray-400{
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+  
   .dark .hover\:dark\:border-primary:hover{
   --tw-border-opacity: 1;
   border-color: rgb(12 113 135 / var(--tw-border-opacity));
@@ -1102,12 +1173,31 @@ body{
   
   @media (min-width: 540px){
 
+  .sm\:mx-4{
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+
   .sm\:mr-4{
     margin-right: 1rem;
   }
 
+  .sm\:px-4{
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .sm\:py-4{
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
   .sm\:text-\[42px\]{
     font-size: 42px;
+  }
+
+  .sm\:text-4xl{
+    font-size: 3rem;
   }
 }
   
@@ -1139,6 +1229,10 @@ body{
 
   .lg\:ml-auto{
     margin-left: auto;
+  }
+
+  .lg\:mt-0{
+    margin-top: 0px;
   }
 
   .lg\:block{
@@ -1177,6 +1271,10 @@ body{
     width: 50%;
   }
 
+  .lg\:w-1\/2{
+    width: 50%;
+  }
+
   .lg\:max-w-full{
     max-width: 100%;
   }
@@ -1203,6 +1301,10 @@ body{
     padding-top: 0px;
   }
 
+  .lg\:pb-\[90px\]{
+    padding-bottom: 90px;
+  }
+
   .lg\:text-right{
     text-align: right;
   }
@@ -1226,6 +1328,14 @@ body{
 
   .xl\:mr-4{
     margin-right: 1rem;
+  }
+
+  .xl\:w-1\/2{
+    width: 50%;
+  }
+
+  .xl\:w-5\/12{
+    width: 41.666667%;
   }
 
   .xl\:px-9{
