--- a/public/css/app.css
+++ b/public/css/app.css
@@ -566,6 +566,15 @@ body{
   margin-left: auto;
   margin-right: auto;
 }
+.mt-10{
+  margin-top: 2.5rem;
+}
+.mb-2{
+  margin-bottom: 0.5rem;
+}
+.mb-8{
+  margin-bottom: 2rem;
+}
 .mb-0{
   margin-bottom: 0px;
 }
@@ -575,20 +584,20 @@ body{
 .mb-6{
   margin-bottom: 1.5rem;
 }
-.mb-8{
-  margin-bottom: 2rem;
-}
 .mb-4{
   margin-bottom: 1rem;
 }
 .ml-2{
   margin-left: 0.5rem;
 }
-.mt-10{
-  margin-top: 2.5rem;
+.mb-\[60px\]{
+  margin-bottom: 60px;
 }
-.mb-2{
-  margin-bottom: 0.5rem;
+.mb-12{
+  margin-bottom: 3rem;
+}
+.mb-1{
+  margin-bottom: 0.25rem;
 }
 .block{
   display: block;
@@ -644,6 +653,9 @@ body{
 .max-w-\[520px\]{
   max-width: 520px;
 }
+.max-w-\[510px\]{
+  max-width: 510px;
+}
 .-translate-y-1\/2{
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -666,17 +678,16 @@ body{
 .justify-between{
   justify-content: space-between;
 }
+.space-x-1 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.25rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
+}
 .overflow-hidden{
   overflow: hidden;
 }
 .rounded-lg{
   border-radius: 0.5rem;
-}
-.rounded-full{
-  border-radius: 9999px;
-}
-.rounded-md{
-  border-radius: 0.375rem;
 }
 .rounded{
   border-radius: 0.25rem;
@@ -684,15 +695,17 @@ body{
 .rounded-2xl{
   border-radius: 1rem;
 }
+.rounded-full{
+  border-radius: 9999px;
+}
+.rounded-md{
+  border-radius: 0.375rem;
+}
 .border{
   border-width: 1px;
 }
 .border-2{
   border-width: 2px;
-}
-.border-\[\#E5E5E5\]{
-  --tw-border-opacity: 1;
-  border-color: rgb(229 229 229 / var(--tw-border-opacity));
 }
 .border-red-700{
   --tw-border-opacity: 1;
@@ -710,6 +723,10 @@ body{
   --tw-border-opacity: 1;
   border-color: rgb(245 158 11 / var(--tw-border-opacity));
 }
+.border-\[\#E5E5E5\]{
+  --tw-border-opacity: 1;
+  border-color: rgb(229 229 229 / var(--tw-border-opacity));
+}
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -717,14 +734,6 @@ body{
 .bg-body-color{
   --tw-bg-opacity: 1;
   background-color: rgb(99 115 129 / var(--tw-bg-opacity));
-}
-.bg-gray-200{
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
-.bg-gray-100{
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 .bg-red-700{
   --tw-bg-opacity: 1;
@@ -737,6 +746,14 @@ body{
 .bg-primary{
   --tw-bg-opacity: 1;
   background-color: rgb(12 113 135 / var(--tw-bg-opacity));
+}
+.bg-gray-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+.bg-gray-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 .fill-current{
   fill: currentColor;
@@ -765,10 +782,6 @@ body{
   padding-top: 6px;
   padding-bottom: 6px;
 }
-.py-8{
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
 .py-4{
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -776,6 +789,10 @@ body{
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 .py-12{
   padding-top: 3rem;
@@ -790,6 +807,12 @@ body{
 }
 .pl-2{
   padding-left: 0.5rem;
+}
+.pt-20{
+  padding-top: 5rem;
+}
+.pb-12{
+  padding-bottom: 3rem;
 }
 .pt-24{
   padding-top: 6rem;
@@ -806,23 +829,14 @@ body{
 .pt-11{
   padding-top: 2.75rem;
 }
-.pt-20{
-  padding-top: 5rem;
-}
-.pb-12{
-  padding-bottom: 3rem;
+.text-center{
+  text-align: center;
 }
 .text-xl{
   font-size: 1.5rem;
 }
 .text-xs{
   font-size: .875rem;
-}
-.text-4xl{
-  font-size: 3rem;
-}
-.text-base{
-  font-size: 1.125rem;
 }
 .text-lg{
   font-size: 1.25rem;
@@ -833,26 +847,32 @@ body{
 .text-3xl{
   font-size: 2.25rem;
 }
+.text-base{
+  font-size: 1.125rem;
+}
+.text-4xl{
+  font-size: 3rem;
+}
 .font-bold{
   font-weight: 700;
 }
 .font-medium{
   font-weight: 500;
 }
-.font-normal{
-  font-weight: 400;
-}
 .font-semibold{
   font-weight: 600;
+}
+.font-normal{
+  font-weight: 400;
 }
 .italic{
   font-style: italic;
 }
-.leading-snug{
-  line-height: 1.375;
-}
 .leading-normal{
   line-height: 1.5;
+}
+.leading-snug{
+  line-height: 1.375;
 }
 .leading-tight{
   line-height: 1.25;
@@ -861,9 +881,25 @@ body{
   --tw-text-opacity: 1;
   color: rgb(12 113 135 / var(--tw-text-opacity));
 }
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
 .text-dark{
   --tw-text-opacity: 1;
   color: rgb(9 14 52 / var(--tw-text-opacity));
+}
+.text-primary{
+  --tw-text-opacity: 1;
+  color: rgb(12 113 135 / var(--tw-text-opacity));
+}
+.text-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+.text-amber-500{
+  --tw-text-opacity: 1;
+  color: rgb(245 158 11 / var(--tw-text-opacity));
 }
 .text-gray-800{
   --tw-text-opacity: 1;
@@ -873,25 +909,9 @@ body{
   --tw-text-opacity: 1;
   color: rgb(217 119 6 / var(--tw-text-opacity));
 }
-.text-primary{
-  --tw-text-opacity: 1;
-  color: rgb(12 113 135 / var(--tw-text-opacity));
-}
 .text-body-color{
   --tw-text-opacity: 1;
   color: rgb(99 115 129 / var(--tw-text-opacity));
-}
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-.text-gray-500{
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-.text-amber-500{
-  --tw-text-opacity: 1;
-  color: rgb(245 158 11 / var(--tw-text-opacity));
 }
 .no-underline{
   -webkit-text-decoration-line: none;
@@ -1112,14 +1132,14 @@ body{
   --tw-bg-opacity: 0.8;
 }
   
-  .hover\:text-primary:hover{
-  --tw-text-opacity: 1;
-  color: rgb(12 113 135 / var(--tw-text-opacity));
-}
-  
   .hover\:text-white:hover{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+  
+  .hover\:text-primary:hover{
+  --tw-text-opacity: 1;
+  color: rgb(12 113 135 / var(--tw-text-opacity));
 }
   
   .hover\:underline:hover{
@@ -1218,12 +1238,12 @@ body{
     padding-bottom: 1rem;
   }
 
-  .sm\:text-\[42px\]{
-    font-size: 42px;
-  }
-
   .sm\:text-4xl{
     font-size: 3rem;
+  }
+
+  .sm\:text-\[42px\]{
+    font-size: 42px;
   }
 
   .sm\:text-\[38px\]{
@@ -1241,6 +1261,15 @@ body{
     padding-left: 2.25rem;
     padding-right: 2.25rem;
   }
+
+  .md\:py-3{
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+  }
+
+  .md\:text-\[40px\]{
+    font-size: 40px;
+  }
 }
   
   @media (min-width: 960px){
@@ -1257,16 +1286,16 @@ body{
     margin-left: 1.5rem;
   }
 
+  .lg\:mt-0{
+    margin-top: 0px;
+  }
+
   .lg\:mr-3{
     margin-right: 0.75rem;
   }
 
   .lg\:ml-auto{
     margin-left: auto;
-  }
-
-  .lg\:mt-0{
-    margin-top: 0px;
   }
 
   .lg\:mb-0{
@@ -1297,20 +1326,20 @@ body{
     width: 100%;
   }
 
-  .lg\:w-5\/12{
-    width: 41.666667%;
-  }
-
-  .lg\:w-1\/12{
-    width: 8.333333%;
-  }
-
   .lg\:w-6\/12{
     width: 50%;
   }
 
   .lg\:w-1\/2{
     width: 50%;
+  }
+
+  .lg\:w-5\/12{
+    width: 41.666667%;
+  }
+
+  .lg\:w-1\/12{
+    width: 8.333333%;
   }
 
   .lg\:max-w-full{
@@ -1335,6 +1364,15 @@ body{
     padding-right: 1.5rem;
   }
 
+  .lg\:px-8{
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .lg\:pb-\[90px\]{
+    padding-bottom: 90px;
+  }
+
   .lg\:pt-\[80px\]{
     padding-top: 80px;
   }
@@ -1343,8 +1381,8 @@ body{
     padding-top: 0px;
   }
 
-  .lg\:pb-\[90px\]{
-    padding-bottom: 90px;
+  .lg\:pt-\[120px\]{
+    padding-top: 120px;
   }
 
   .lg\:text-right{
