--- a/public/css/app.css
+++ b/public/css/app.css
@@ -856,6 +856,10 @@ body{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
+.bg-green-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+}
 .bg-opacity-5{
   --tw-bg-opacity: 0.05;
 }
@@ -1070,6 +1074,10 @@ body{
 .text-amber-600{
   --tw-text-opacity: 1;
   color: rgb(217 119 6 / var(--tw-text-opacity));
+}
+.text-gray-100{
+  --tw-text-opacity: 1;
+  color: rgb(243 244 246 / var(--tw-text-opacity));
 }
 .no-underline{
   -webkit-text-decoration-line: none;
